--- a/index.html
+++ b/index.html
@@ -29,7 +29,107 @@
   <body class="Body">
     <div class="Img">
       <section class="Section">
-        <div class="Inside-Faq"></div>
+        <div class="Inside-Faq">
+          <div class="Icon-holder">
+            <div class="Svg">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="30"
+                fill="none"
+                viewBox="0 0 40 41"
+              >
+                <path
+                  fill="#AD28EB"
+                  d="M37.5 20.5a2.467 2.467 0 0 1-1.64 2.344l-9.913 3.604-3.603 9.911a2.5 2.5 0 0 1-4.688 0l-3.604-9.922-9.911-3.593a2.5 2.5 0 0 1 0-4.688l9.921-3.604 3.594-9.911a2.5 2.5 0 0 1 4.688 0l3.604 9.921 9.911 3.594A2.467 2.467 0 0 1 37.5 20.5Z"
+                />
+              </svg>
+            </div>
+            <div class="Faq">FAQs</div>
+          </div>
+          <div class="First-question-holder">
+            <p class="First-question">
+              What is Frontend Mentor, and how will it help me?
+            </p>
+            <div class="Svg-holder">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#301534"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="First-answer-div">
+            <p class="First-answer">
+              Frontend Mentor offers realistic coding challenges to help
+              developers improve their frontend coding skills with projects in
+              HTML, CSS, and Javascript. it's suitable for all levels and ideal
+              for portfolio building.
+            </p>
+          </div>
+
+          <div class="Second-question-holder">
+            <p class="Second-question">Is Frontend Mentor free?</p>
+            <div class="Svg-holder">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="30"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#AD28EB"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="Second-answer-div">
+            <p class="Second-answer">
+              Yes, Frontend Mentor offers both free and premium coding
+              challenges, with the free option providing access to a range of
+              projects suitable for all skill levels.
+            </p>
+          </div>
+
+          <div class="Third-question-holder">
+            <p class="First-question">
+              What is Frontend Mentor, and how will it help me?
+            </p>
+            <div class="Svg-holder">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#301534"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="First-answer-div">
+            <p class="First-answer">
+              Frontend Mentor offers realistic coding challenges to help
+              developers improve their frontend coding skills with projects in
+              HTML, CSS, and Javascript. it's suitable for all levels and ideal
+              for portfolio building.
+            </p>
+          </div>
+        </div>
       </section>
     </div>
 
