--- a/index.html
+++ b/index.html
@@ -51,35 +51,9 @@
             <p class="First-question">
               What is Frontend Mentor, and how will it help me?
             </p>
-            <div class="Svg-holder">
+            <div class="Svg-holder First-sign">
               <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                fill="none"
-                viewBox="0 0 30 31"
-              >
-                <path
-                  fill="#301534"
-                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"
-                />
-              </svg>
-            </div>
-          </div>
-
-          <div class="First-answer-div">
-            <p class="First-answer">
-              Frontend Mentor offers realistic coding challenges to help
-              developers improve their frontend coding skills with projects in
-              HTML, CSS, and Javascript. it's suitable for all levels and ideal
-              for portfolio building.
-            </p>
-          </div>
-
-          <div class="Second-question-holder">
-            <p class="Second-question">Is Frontend Mentor free?</p>
-            <div class="Svg-holder">
-              <svg
+                class="first-plus"
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
                 height="30"
@@ -91,22 +65,8 @@
                   d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"
                 />
               </svg>
-            </div>
-          </div>
-          <div class="Second-answer-div">
-            <p class="Second-answer">
-              Yes, Frontend Mentor offers both free and premium coding
-              challenges, with the free option providing access to a range of
-              projects suitable for all skill levels.
-            </p>
-          </div>
-
-          <div class="Third-question-holder">
-            <p class="First-question">
-              What is Frontend Mentor, and how will it help me?
-            </p>
-            <div class="Svg-holder">
               <svg
+                class="first-minus"
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
                 height="20"
@@ -121,12 +81,135 @@
             </div>
           </div>
 
-          <div class="First-answer-div">
+          <div class="First-answer-div First-hidden">
             <p class="First-answer">
               Frontend Mentor offers realistic coding challenges to help
               developers improve their frontend coding skills with projects in
               HTML, CSS, and Javascript. it's suitable for all levels and ideal
               for portfolio building.
+            </p>
+          </div>
+
+          <div class="Second-question-holder">
+            <p class="Second-question">Is Frontend Mentor free?</p>
+            <div class="Svg-holder Second-sign">
+              <svg
+                class="second-plus"
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="30"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#AD28EB"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+              <svg
+                class="second-minus"
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#301534"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="Second-answer-div Second-hidden">
+            <p class="Second-answer">
+              Yes, Frontend Mentor offers both free and premium coding
+              challenges, with the free option providing access to a range of
+              projects suitable for all skill levels.
+            </p>
+          </div>
+
+          <div class="Third-question-holder">
+            <p class="Third-question">
+              Can I use Frontend Mentor projects in my portfolio?
+            </p>
+            <div class="Svg-holder Third-sign">
+              <svg
+                class="third-plus"
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="30"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#AD28EB"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+              <svg
+                class="third-minus"
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#301534"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="Third-answer-div Third-hidden">
+            <p class="Third-answer">
+              Yes, you can use projects completed on Frontend Mentor in your
+              portfolio. It's an excellent way to showcase your skills to
+              potential employers!
+            </p>
+          </div>
+
+          <div class="Fourth-question-holder">
+            <p class="Fourth-question">
+              How can I get help if I'm stuck on a Frontend Mentor challenge?
+            </p>
+            <div class="Svg-holder Fourth-sign">
+              <svg
+                class="fourth-plus"
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="30"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#AD28EB"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+              <svg
+                class="fourth-minus"
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                fill="none"
+                viewBox="0 0 30 31"
+              >
+                <path
+                  fill="#301534"
+                  d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <div class="Fourth-answer-div Fourth-hidden">
+            <p class="Fourth-answer">
+              The best place to get help is inside Frontend Mentor's Discord
+              community. There's a help channel where you can ask questions and
+              seek support from other community members.
             </p>
           </div>
         </div>
